@@ -1,6 +1,7 @@
 h_sources = \
 	mark5_stream.h \
-	mark5bfix.h
+	mark5bfix.h \
+	mark5bfile.h
 c_sources = \
 	mark5_stream.c \
 	mark5_stream_file.c \
@@ -15,7 +16,8 @@ c_sources = \
 	format_vdifb.c \
 	blanker_none.c \
 	blanker_mark5.c \
-	mark5bfix.c
+	mark5bfix.c \
+	mark5bfile.c
 
 library_includedir = $(includedir)/mark5access
 library_include_HEADERS = $(h_sources)
